force-app/main/default/objects/SmokeTestProgress__e/SmokeTestProgress__e.object-meta.xml
<CustomObject>
    <description>Published by the SmokeTestOrchestrator after each scenario completes or changes phase. Subscribed to by the SmokeTestDashboard LWC via lightning/empApi for real-time progress updates. Enables the dashboard to display live scenario pass/fail counts and current execution phase without polling SmokeTestExecution__c records.</description>
    <label>Smoke Test Progress</label>
    <pluralLabel>Smoke Test Progresses</pluralLabel>
</CustomObject>