force-app/main/default/objects/SmokeTestProgress__e/fields/CompletedCount__c.field-meta.xml
<CustomField>
    <fullName>CompletedCount__c</fullName>
    <description>Running count of scenarios that have completed (regardless of pass/fail) at the time this progress event was published. Published by: SmokeTestOrchestrator. Consumed by: SmokeTestDashboard LWC to update the progress bar (CompletedCount / TotalCount).</description>
    <label>Completed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>