force-app/main/default/objects/SmokeTestProgress__e/fields/CurrentPhase__c.field-meta.xml
<CustomField>
    <fullName>CurrentPhase__c</fullName>
    <description>Human-readable label of the current execution phase, e.g. Initializing, Running Scenarios, Evaluating Security Score, Finalizing. Published by: SmokeTestOrchestrator when transitioning between execution phases. Consumed by: SmokeTestDashboard LWC to display the current phase in the status header.</description>
    <label>Current Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>