force-app/main/default/objects/SmokeTestProgress__e/fields/ExecutionId__c.field-meta.xml
<CustomField>
    <fullName>ExecutionId__c</fullName>
    <description>18-character Salesforce ID of the SmokeTestExecution__c record this progress event belongs to. Published by: SmokeTestOrchestrator Queueable. Consumed by: SmokeTestDashboard LWC via lightning/empApi to filter events for the current execution being viewed and update the correct progress widget.</description>
    <label>Execution ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>