force-app/main/default/objects/SmokeTestProgress__e/fields/ScenarioName__c.field-meta.xml
<CustomField>
    <fullName>ScenarioName__c</fullName>
    <description>DeveloperName of the SmokeTestScenario__mdt record that just completed or changed status. Published by: SmokeTestOrchestrator after each scenario finishes. Consumed by: SmokeTestDashboard LWC to update the per-scenario status row in the live execution view.</description>
    <label>Scenario Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>