force-app/main/default/objects/SmokeTestProgress__e/fields/ScenarioStatus__c.field-meta.xml
<CustomField>
    <fullName>ScenarioStatus__c</fullName>
    <description>Result status of the scenario referenced by ScenarioName__c. Published by: SmokeTestOrchestrator. Consumed by: SmokeTestDashboard LWC to color-code the scenario row (green=Passed, red=Failed, yellow=Running). Expected values: Running, Passed, Failed, Skipped (max 50 characters).</description>
    <label>Scenario Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>