force-app/main/default/objects/SmokeTestProgress__e/fields/TotalCount__c.field-meta.xml
<CustomField>
    <fullName>TotalCount__c</fullName>
    <description>Total number of enabled scenarios in this execution run (sourced from enabled SmokeTestScenario__mdt records). Published by: SmokeTestOrchestrator at execution start. Consumed by: SmokeTestDashboard LWC as the denominator for the progress bar and completion percentage.</description>
    <label>Total Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>